tests/compile-fail/Rule_5_9.rs
const count: i32 = 0;

fn main() {
    let count: i32 = 1;
    //~^ ERROR interpreted as a constant pattern, not new variable
}
